data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4111.wast
;; 10. **Test Description**:    Create a function signature used in `call_indirect` but mismatch parameters for stack consumption and include an early return point with an `unreachable` afterward.    - **Constraint Checked**: Operand sufficiency and early returns.    - **Relation to Unreachable Code Execution**: If parameters are deemed incorrect, it should result in an earlier trap rather than reaching the `unreachable`.

(assert_invalid
  (module
    (type (func (param i64) (result i32)))
    (table funcref (elem $f))
    (func $f (result i32) (i32.const 42))
    (func $operand-insufficient (i32.const 0) (call_indirect (type 0) (i64.const 1)) (unreachable))
  )
  "type mismatch"
)